--- a/templates/result.html
+++ b/templates/result.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Roman Numbers Converter Project</title>
+    <title>Clarusway Project - 001</title>
     <style>
         body {
             width: 600px;
@@ -47,7 +47,7 @@
     <p>Number <span class="result"> <b> {{ number_decimal }}</b> </span>equals to <span class="result"><b>{{ number_roman }}</b></span> in Roman Numerals</p><br><br>
 
 
-    <p class="footnote"><i>This app is developed in Python by <b>{{ Hasan İlker }}</b> and deployed with Flask on AWS
+    <p class="footnote"><i>This app is developed in Python by <b>{{ developer_name }}</b> and deployed with Flask on AWS
             EC2 Instance using AWS Clouldformation Service.</i></p>
 </body>
 
